# MT_ObjSLAM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SetupEnv  Test_TrackingRes.mat  a.out  run_ITM_With_Test.bash  test_cam_projection.mat  testing_commands.txt  testpose.m  track.txt  track_1.txt  track_2.txt  trackingResults.txt
Dataset/LPD/: 0003.pgm  0005.pgm  0010.pgm  0010.ppm
Dataset/LPD_Teddy_Format/: 0000.pgm  0000.ppm  0001.pgm  0001.ppm  0002.pgm  0002.ppm  0003.ppm  0004.pgm  0005.ppm  0006.pgm  0006.ppm  0007.pgm  0008.pgm  0009.pgm  0009.ppm  0011.pgm  0011.ppm  0012.pgm  0012.ppm  calib.txt  calib_2.txt
Dataset/Realistic rendering dataset/: groundTruthPoseVel_imu.txt
Dataset/RealisticRenderingDataset/: calib.txt  extrinsics.txt  imageLogs.txt  intrinsics.txt  spline_trajectory_realistic_rendering.txt
Dataset/Test/: 0000.pgm  0001.pgm  0003.pgm  0004.ppm  0007.pgm  0010.pgm
Executables/: TrackerMapper_CLI_th0.5  TrackerMapper_CLI_th0.75  TrackerMapper_CLIth0.5  TrackerMapper_ObjTrackingOff_Run05  TrackerMapper_allFeaturesOn_1021  TrackerMapper_allFeaturesOn_Run04  TrackerMapper_th0.5  TrackerMapper_th0.75  TrackerMapper_trackAll_skipMap  TrackerMapper_trackAll_skipMap_oldBGClean
ObjSLAMMapper/: CMakeLists.txt  testing_commands.txt
ObjSLAMMapper/src/: DatasetReader_LPD_Dataset.h  main.cpp
Test_PythonCAPI/: Makefile  test  test_python_capi  test_python_capi.cpp  test_python_capi.out  testsimple_python_capi.cpp
UML/: DynSLAM  InfiniTAM.xmi  ORBSLAM2  ORBSLAM2.xmi  ObjSLAM  ObjSLAM.xmi  ObjSLAM_autosave.xmi  ObjSLAM_with_g2o.xmi  ObjSLAM_with_g2o_0530.xmi  ObjSLAM_with_g2o_0530_autosave.xmi  ObjSLAM_with_g2o_V2.xmi  g2o.xmi  owncode  semantic.xmi  test.xmi  test.xmi.tgz
UML/Export/: ObjSLAM_with_g2o_V2.docbook
UML_code_generation/ObjSLAM/: InfiniTAMCreator.cpp  LoopClosureDetector.h  ObejctsGraph.cpp  ObjSLAMEngine.cpp  ObjectEdge.cpp  ObjectNode.h  ObjectSLAMTracker.cpp  ObjectSLAMTracker.h  ObjectSceneReconstructionEngine.h  ObjectsGraph.cpp  PoseGraph.h  SemanticLabelEngine.cpp  SemanticLabelEngine_Groundtruth.cpp  SemanticScene.h  SemanticView.cpp  SemanticView.h
UML_code_generation_V2/ObjSLAM/: InfiniTAMEngine.cpp  ObjSLAMEngine.h  ObjectEdge.h  ObjectInstance.h  ObjectSLAMTracker.h  ObjectSceneReconstructionEngine.h  ObjectView.cpp  ObjectsGraph.h  Pose.h  SemanticLabelCreator.cpp  SemanticLabelEngine.cpp
UML_exported/: ObjSLAM_with_g2o.docbook
UML_exported/ObjSLAM/: LabeledVoxel.cpp  ObejctsGraph.h  ObjSLAMEngine.h  ObjectClassLabel.h  ObjectGraphCreator.h  ObjectNode.cpp  ObjectSceneReconstructionEngine.cpp  ObjectsGraph.h  SemanticLabelEngine_MRCNN.h
UML_generation/ObjSLAM/: InfiniTAMCreator.cpp  LoopClosureDetector.h  ObejctsGraph.h  ObjSLAMEngine.h  ObjectClassLabel.h  ObjectGraphCreator.cpp  ObjectGraphCreator.h  ObjectInstance.h  ObjectNode.h  ObjectSceneReconstructionEngine.h  ObjectsGraph.h  SemanticLabelCreator.h  SemanticLabelEngine.cpp  SemanticLabelEngine_Groundtruth.cpp  SemanticLabelEngine_MRCNN.cpp  SemanticLabelEngine_MRCNN.h  SemanticScene.cpp  SemanticScene.h  SemanticView.h
build_scripts/: cmake_build_test.sh  cmake_build_test_noCUDA.sh
eval/: Command  evaluate_ate.py
eval/living0/: eval_noSkipNoLabel.txt  eval_noSkipWithLabel.txt  eval_skip0_200_ICP.txt  eval_skip0_ICP_noLabel.txt  eval_skip2_deleteVoxel.txt  eval_skip4_ICP.txt  eval_skip4_NewTracking.txt  trackingResults.txt  trackingResults_200_ICP.txt  trackingResults_ICP_noLabel.txt  trackingResults_noSkipNoLabel.txt  trackingResults_noSkipWithLabel.txt  trackingResults_skip2_deleteVoxel.txt  trackingResults_skip4_ICP  trackingResults_skip4_NewTracking.txt  trackingResults_skip9.txt  trackingResults_skip9_noLabel.txt
eval/living0n_1012/: eval.txt  trackingResults.txt  trackingResults_skip2.txt
eval/living0noise/: eval_skip0_label.txt  eval_skip2.txt  livingRoom0n.gt.freiburg  trackingResults_skip0_label  trackingResults_skip3_Label.txt  trackingResults_skip9_noLabel.txt
eval/living1/: eval_KF3.txt  eval_skip0_1_deleteVoxel.txt  eval_skip0_1n_deleteVoxel.txt  eval_skip0_label.txt  eval_skip2New.txt  eval_skip2_1n_deleteVoxel.txt  eval_skip2_NewTracking_OMP.txt  eval_skip2_deleteVoxel.txt  eval_skip2_deleteVoxel_2.txt  eval_skip2_label.txt  eval_skip2_label_oldtracking.txt  eval_skip4_NewTracking_OMP.txt  eval_skip9_deleteVoxel.txt  eval_skip9_label.txt  livingRoom1.gt.freiburg  trackingResults.txt  trackingResults_1_skip0_deleteVoxel.txt  trackingResults_1_skip0_deleteVoxel_noInv.txt  trackingResults_1n_skip0_deleteVoxel.txt  trackingResults_1n_skip2_deleteVoxel.txt  trackingResults_KF3.txt  trackingResults_skip0_label.txt  trackingResults_skip2New.txt  trackingResults_skip2_NewTracking_OMP.txt  trackingResults_skip2_deleteVoxel.txt  trackingResults_skip2_deleteVoxel_2.txt  trackingResults_skip2_label.txt  trackingResults_skip2_label_oldtracking.txt  trackingResults_skip4_NewTracking_OMP.txt  trackingResults_skip9  trackingResults_skip9_deleteVoxel.txt  trackingResults_skip9_label.txt
eval/living1n_1012/: eval.txt  trackingResults.txt
eval/living1n_1012_oldP/: eval.txt  trackingResults.txt
eval/living1n_1016/: eval.txt  livingRoom1n.gt.freiburg  trackingRes_noSkip.txt  trackingResults.txt  trackingResults_1016.txt  trackingResults_noBGClean.txt  trackingResults_noLabel_skip2.txt  trackingResults_nolabel.txt  trackingResults_nolabel_trackAllSkip2.txt  trackingResults_refined.txt  trackingResults_skip2_newBGClean.txt  trackingResults_trackAll_skip2.txt
eval/living1noise/: eval_skip2.txt  eval_skip2_deleteVox.txt  trackingResults.txt  trackingResults_skip0_label  trackingResults_skip2.txt  trackingResults_skip2_deleteVox.txt  trackingResults_skip9_nolabel.txt
eval/living2n/: eval_skip2_deleteVox.txt  livingRoom2n.gt.freiburg  trackingResults_skip2_deleteVox.txt
eval/living3/: eval_900.txt  eval_nolabel.txt  eval_skip2.txt  trackingResults_900.txt  trackingResults_nolabel.txt  trackingResults_skip2.txt
eval/lving1/: trackingResults_first100_withLabel.txt
eval/traj0/: eval_skip2.txt  (+5 more)
src/: ObjSLAM.cpp  ObjSLAMApp.cpp  ObjSLAMEngine.h
(+1360 files in other folders)
